crates/huak_cli/tests/snapshots/r#mod__test_version__tests__version.snap
---
source: crates/huak_cli/tests/test_version.rs
info:
  program: huak
  args:
    - version
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
[0m[0m[1m[32mversion[0m[1m:[0m 0.0.1

